# emovi-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
paper/: main.tex  references.bib
scripts/: build_dictionary.py  generate_paper_outputs.py  validate_ceey.py
src/emovi_mcp/: __init__.py  __main__.py  config.py  data_loader.py  dictionary.py  main.py  stats_engine.py
src/emovi_mcp/data/: dictionary.json
src/emovi_mcp/helpers/: formatting.py  labels.py  mobility_indices.py  survey_variance.py  validation.py  visualization.py  wealth_index.py  weights.py
src/emovi_mcp/tools/: __init__.py  compare.py  describe.py  financial.py  mobility.py  stats.py  subset.py  tabulate.py  temporal.py  variables.py  visualize.py
tests/: conftest.py  test_dictionary.py  test_financial.py  test_mobility.py  test_mobility_indices.py  test_stats_engine.py  test_survey_variance.py  test_temporal.py  test_visualization.py  test_wealth_index.py
validation/: ceey_reference_values.json
