[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emovi-mcp"
version = "0.1.0"
description = "MCP server for ESRU-EMOVI 2023 social mobility survey"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ESRU-EMOVI MCP Contributors" }]
keywords = ["mcp", "social-mobility", "mexico", "esru-emovi", "inequality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp[cli]>=1.25.0,<2",
    "pandas>=2.0",
    "pyreadstat>=1.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "openpyxl>=3.0",
]

[project.scripts]
emovi-mcp = "emovi_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/emovi_mcp"]
