[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emovi-mcp"
version = "0.2.0"
description = "MCP server for ESRU-EMOVI 2023 social mobility survey"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ESRU-EMOVI MCP Contributors" }]
keywords = ["mcp", "social-mobility", "mexico", "esru-emovi", "inequality", "intergenerational", "transition-matrix"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp[cli]>=1.25.0,<2",
    "pandas>=2.0",
    "pyreadstat>=1.2",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/Lalitronico/emovi-mcp"
Repository = "https://github.com/Lalitronico/emovi-mcp"
Issues = "https://github.com/Lalitronico/emovi-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "openpyxl>=3.0",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.scripts]
emovi-mcp = "emovi_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/emovi_mcp"]
